2003-08-30 Andras Varga

	* Makefile.in: fixed bug which prevented plove from getting 
	command-line arguments ($* didn't make it to the wrapper script)

2003-06-16  ------ omnetpp-2.3 released ------

2003-03-15  ------ omnetpp-2.3b2 released ------

2003-02-15  ------ omnetpp-2.3b1 released ------

2003-01-19  Andras Varga

	* Cygwin fixes; put checkTckTkVersion and setupTkOptions (was generic_-
	bindings) into widgets.tcl

2003-01-11  Andras Varga

	* titlefmt: variables must begin with "$": $NAME, $FILENAME, $ID, etc.

	* Save Picture dialog: adjust filename extension according to output
	type.

	* main.tcl: appearance of menus on Unix made more contemporary 
	(via option add's)

2002-12-07  Andras Varga

	* UI redesign -- uses iconic toolbar, tooltips, all bells and whistles

2002-10-29  Andras Varga

	* use combobox.tcl by Bryan Oakley

2002-05-04  ------ omnetpp-2.2 released ------

2001-08-30  Andras Varga

	* cosmetic changes; Plove 2.1p1 win32 binary bugfix release

2001-08-29  Andras Varga

	* doplot.tcl rewritten to handle Windows better. Fixed bugs associated
        with slashes/backslashes in filenames in batch files and tabs/spaces
        in vector files. New feature: can write Windows .bat file also, not
        only Unix shell script. (Restriction: awk-based filters aren't added
        correctly to the .bat files.)

2001-05-18  Andras Varga

	* ------ omnetpp-2.1 released ------

	* fixed a bug in startup code

	* Windows: added rc file with icon

2001-05-02  Andras Varga

	* fixed Help|README when using compiled-in Tcl code

	* geometry management improved

2001-04-28  Andras Varga

	* bugfix in .ploverc handling

2001-04-20  Andras Varga

	* bugfix in new WinMain() startup code

2001-04-19  Andras Varga

	* default config file added: before processing $HOME/.ploverc,
	also reads .ploverc from the Plove program dir

2001-04-16  Andras Varga

	* Plove can now be compiled as GUI application (not console app)